--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -211,14 +211,14 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Pakistan]]''' – Islamic Republic of Pakistan
 * '''[[Palau]]''' – Republic of Palau
 * '''''[[Palestine]]''''' – Occupied Palestinian Territories.
-* '''[[Panama]]}''' – Republic of Panama.
+* '''[[Panama]]''' – Republic of Panama.
 * '''[[Papua New Guinea]]''' – Independent State of Papua New Guinea
-* '''[[Paraguay]]''' – Republic of Paraguay
+* '''[[པ་ར་གུ་ཝའི]]''' – Republic of Paraguay
 * '''[[Peru]]''' – Republic of Peru
 * '''[[Philippines]]''' – Republic of the Philippines
 * [[Pitcairn Islands]] – Pitcairn, Henderson, Ducie, and Oeno Islands (''UK overseas territory'')
 * '''[[པོ་ལེནཌི]]''' – Republic of Poland
-* '''[[Portugal]]''' – Portuguese Republic
+* '''[[པོར་ཅུ་གལ་]]''' – Portuguese Republic
 * [[Puerto Rico]] – Commonwealth of Puerto Rico (''US commonwealth'')
 
 === Q ===
