--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -222,7 +222,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * [[Puerto Rico]] – Commonwealth of Puerto Rico (''US commonwealth'')
 
 === Q ===
-* '''[[Qatar]]''' – State of Qatar
+* '''[[ཀ་ཏར་]]''' – State of Qatar
 
 === R ===
 * '''[[Romania]]'''
