--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -231,7 +231,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 
 === S ===
 * [[Saint Barthélemy]] – Collectivity of Saint Barthélemy (''French overseas collectivity'')
-* [[Saint Helena]] (''UK overseas territory'')
+* [[Saint Helena]] (''[[UK]] overseas territory'')
 * '''[[Saint Kitts and Nevis]]''' – Federation of Saint Christopher and Nevis
 * '''[[Saint Lucia]]'''
 * [[Saint Martin]] – Collectivity of Saint Martin (''French overseas collectivity'')
@@ -251,16 +251,16 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Solomon Islands]]'''
 * '''[[Somalia]]'''<ref>[[Somalia]] is presently fragmented with its [[Transitional Federal Parliament|Transitional National Government]]</ref>
 * '''''[[Somaliland]]''''' – Republic of Somaliland.
-* '''[[South Africa]]''' – Republic of South Africa
+* '''[[སའུཐ་ཨཕ་རི་ཀ་]]''' – Republic of South Africa
 * '''''[[South Ossetia]]''''' – Republic of South Ossetia.
-* '''[[Spain]]''' – Kingdom of Spain
-* '''[[Sri Lanka]]''' – Democratic Socialist Republic of Sri Lanka
+* '''[[སིཔཱེན་]]''' – Kingdom of Spain
+* '''[[ཤྲཱྀ་ལངཀ་]]''' – Democratic Socialist Republic of Sri Lanka
 * '''[[Sudan]]''' – Republic of the Sudan
 * '''[[Suriname]]''' – Republic of Suriname
 * [[Svalbard]] (''Territory of Norway'')<ref>[[Svalbard]] is an overseas territory of [[Norway]] recognized by international treaty.</ref>
 * '''[[Swaziland]]''' – Kingdom of Swaziland
-* '''[[Sweden]]''' – Kingdom of Sweden
-* '''[[Switzerland]]''' – Swiss Confederation
+* '''[[སུའི་ཌན་]]''' – Kingdom of Sweden
+* '''[[སུའིཊ་ཛར་ལེན་]]''' – Swiss Confederation
 * '''[[Syria]]''' – Syrian Arab Republic
 
 === T ===
