--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -240,7 +240,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 * '''[[Samoa]]''' – Independent State of Samoa
 * '''[[San Marino]]''' – Most Serene Republic of San Marino
 * '''[[São Tomé and Príncipe]]''' – Democratic Republic of São Tomé and Príncipe
-* '''[[Saudi Arabia]]''' – Kingdom of Saudi Arabia
+* '''[[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]''' – Kingdom of Saudi Arabia
 * '''[[Senegal]]''' – Republic of Senegal
 * '''[[Serbia]]''' – Republic of Serbia<ref>See also [[#K|Kosovo]] - under [[UN]] administration.</ref>
 * '''[[Seychelles]]''' – Republic of Seychelles
