--- a/ཨེ་ཤར་ཡ.mw
+++ b/ཨེ་ཤར་ཡ.mw
@@ -14,7 +14,7 @@ The following is the list of all countries.<nowiki>*</nowiki><ref>list of all co
 
 === ཨ ===
 <onlyinclude>
-* '''''[[Abkhazia]]'''''* – Republic of Abkhazia
+* '''''[[Abkhazia]]''''' – Republic of Abkhazia
 * '''[[ཨཕ་ག་ནིས་ཏཱན]]''' – ཨཕ་ག་ནིསི་ཏཱན་ རི་པ་ལིག་ སི་ལ་མིག་ (Pashto: ''د افغانستان اسلامي جمهوریت'' - ''Da Afġānistān Islāmī Jumhoryat'')
 * [[Akrotiri and Dhekelia]] – Sovereign Base Areas of Akrotiri and Dhekelia (''[[UK]] overseas territory'')
 * [[ཨཱ་ལེནཌི་ མཚོ་གླིང]] – ཨཱ་ལེནཌི་ མཚོ་གླིང། (Åland Islands (''Autonomous province of [[Finland]]'')) (Swedish: ''Landskapet Åland'', Finnish: ''Ahvenanmaan maakunta'')
