*Empty MediaWiki Message*

--- a/བྱང་ཀོ་རི་ཡ་.mw
+++ b/བྱང་ཀོ་རི་ཡ་.mw
@@ -4,11 +4,17 @@
 
 '''བྱང་ཀོ་རི་ཡ་'''(조선민주주의인민공화국, 朝鮮民主主義人民共和國)
 
-----
+
+
+
+
+---------
 * [[པིའོང་ཡང་]]
+* [[ལྷོ་ཀོ་རི་ཡ་]]
 
 {{Asia}}
 
 {{stub}}
 
 [[Category:རྒྱལ་ཁབ]]
+[[Category:ཨེ་ཤི་ཡ]]
