--- a/རྟ་མགོ།.mw
+++ b/རྟ་མགོ།.mw
@@ -1,4 +1,4 @@
-རྟ་མགོ་དེ་ ཐིམ་ཕུ་གི་ས་གནས་ཐག་རིང་ས་ཅིག་ཁར་བཞེངས་ཡོདཔ་དང་ ཁྲོམ་ཁ་ལས་ ཀི་ལོ་མི་ ཊར་ ༡༤ དེ་ཅིག་གི་ས་ཁར་ཡོདཔ་ཨིན། [[སྣུ་འཁོར་གྱི་ལམ་ཁ་ལས་]] དུས་ཡུན་ སྐར་མ་ ༤༠ དེ་ཅིག་རྐང་ཐང་འགྱོ་དགོཔ་ཨིན།
+རྟ་མགོ་དེ་ ཐིམ་ཕུ་གི་ས་གནས་ཐག་རིང་ས་ཅིག་ཁར་བཞེངས་ཡོདཔ་དང་ ཁྲོམ་ཁ་ལས་ ཀི་ལོ་མི་ ཊར་ ༡༤ དེ་ཅིག་གི་ས་ཁར་ཡོདཔ་ཨིན། [[སྣུམ་འཁོར་གྱི་ལམ་ཁ་ལས་]] དུས་ཡུན་ སྐར་མ་ ༤༠ དེ་ཅིག་རྐང་ཐང་འགྱོ་དགོཔ་ཨིན།
 
 [[File:TangoMonastery.jpg|350px|thumb|right|རྟ་མགོ།]]
 
