Replacing Tbilisi_City_Seal.svg with [[File:Seal_of_Tbilisi,_Georgia.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]:).

--- a/ཊི་བི་ལི་སི.mw
+++ b/ཊི་བི་ལི་སི.mw
@@ -1,4 +1,4 @@
-[[File:Tbilisi City Seal.svg|150px]][[File:Flag of Tbilisi.svg|150px]]
+[[File:Seal of Tbilisi, Georgia.svg|150px]][[File:Flag of Tbilisi.svg|150px]]
 
 [[File:Tbilisi sunset-6.jpg|700px]]
 
