--- a/བལྤ་རཨིསོ.mw
+++ b/བལྤ་རཨིསོ.mw
@@ -1,11 +1,11 @@
 
 [[File:Ciudad-Puerto-de-Valparaíso.png|thumbnail]]
 
-ཁྲོམ་སྡེ།
+ཁྲོམ་སྡེ།<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
 
-གྲུ་ཚུགས།
+གྲུ་ཚུགས།<ref>{{cite book|last=Kjellberg|first=Felix|title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity|url=https://www.xnxx.com|location=Sweden|publisher=Felix ulf arvid Kjellberg|year=2017|isbn=9781405924047|page=22}}</ref>
 
-[[ཅི་ལེ]]
+[[ཅི་ལེ]]<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
 
 
 
