--- a/༡༩༧༣.mw
+++ b/༡༩༧༣.mw
@@ -7,6 +7,6 @@
 == ལྷོ་སྣེ་གླིང་། ==
 
 == ཡོ་རོབ་གླིང་ཆེན། ==
-
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
 == གསར་གཏོད། ==
 {{Commons|January 2016|जनवरी २०१६}}
