--- a/དཔལ་མགོན་བདུན་ཅུ་རྩ་ལྔའི་རྒྱལ་པོ་ཆེན་པོ་བཞི་.mw
+++ b/དཔལ་མགོན་བདུན་ཅུ་རྩ་ལྔའི་རྒྱལ་པོ་ཆེན་པོ་བཞི་.mw
@@ -1,1 +1,2 @@
 <ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
