--- a/ལ་དྭགས།.mw
+++ b/ལ་དྭགས།.mw
@@ -1,32 +1,1 @@
-[[File:Gebetsflaggen-tsemo-gompa-leh.JPG|right|thumb|300px|]]
-
-'''རྒྱ་གར་'''ནི་[[རྒྱ་གར་]]ཞིང་ཆེན་ཞིག་རེད།
-
-== ལོ་རྒྱུས། ==
-== སྐྱེལ་འདྲེན། ==
-== མི་འབོར། ==
-== པར་རིས་བར་འཁྱམས། ==
-<center>
-<gallery>
-File:India-LADAKH Full.svg|
-File:Gompa-Phyang-1.jpg|
-File:Tanglanglapass.jpg|
-File:Ladakh Monastery.jpg|
-File:LK130030.jpg|
-File:Ladakh Woman edit4.jpg|
-File:A local woman, Ladakh.jpg|
-File:Stupa Chorten Ladakh.jpg|
-
-</gallery>
-</center>
-
-
-== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
-== དཔྱད་གཞིའི་དཀར་ཆག ==
-== ད་དུང་གཟིགས། ==
-*[[ལ་དྭགས་སྐད།]]
-
-== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-
-
-[[Category:རྒྱ་གར]]
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
