*Empty MediaWiki Message*

--- a/ཐོང་གཤོལ་འཁོར་ལོ་.mw
+++ b/ཐོང་གཤོལ་འཁོར་ལོ་.mw
@@ -1,1 +1,1 @@
-བོད་ཀྱི་ལོ་ཐོའི་སྟེང་སོ་ནམ་འཁོར་ལོ་དང་ཐོང་གཤོལ་འཁོར་ལོ་ཞེས་རི་མོ་གཉིས་བཀོད་ཡོད་ཅིང་། ཐོང་གཤོལ་འཁོར་ལོའི་སྟེང་གི་ཨང་ཀི་ཡང་རྒྱུ་སྐར་ཉེར་བདུན་མཚོན་བྱེད་ཡིན་ཞིང་། ཉི་མས་འཁྱུད་པའི་སྐར་མ་ནས་གཤོལ་ལྕགས་ཀྱི་རྩེ་ལ་གཉིས་བཀོད་དེ། ས་མཐོང་ལ་གསུམ། མི་མཐོང་ལ་གསུམ། འཆང་བཟུང་ལ་གཉིས། གཤོལ་ཟླ་ལ་བཅུ། གཉའ་ཤིང་ལ་བརྒྱད་བཀོད་དེ། ཟླ་བ་རྒྱུ་སྐར་ཉེར་བདུན་གྱི་གཞི་ཁྱོན་གང་དུ་གནས་པའི་སྐར་མ་དེ་གཤོལ་ལྕགས་ཀྱི་རྩེ་གཉིས་ལ་སོང་ན་བཙའ་ཡིས་འཁྱེར་བ་ཐེ་ཚོམ་མེད་པ་དང་། ས་མཐོང་གསུམ་ལ་སོང་ན་ལོ་ལེགས་ཀྱང་སྲོག་ཆགས་ལ་སྡང་བ། མི་མཐོང་གསུམ་ལ་སོང་ན་འབྲུ་རིགས་འཕེལ་ཞིང་ལེགས་པ། འཆང་བཟུང་ལ་སོང་ན་ལོ་ནད་འབྱུང་བ། གཉའ་ཤིང་ལ་སོང་ན་དགྲ་ཡིས་འཇོམས་པའི་དོགས་པ། གཤོལ་ཟླ་བཅུ་ལ་སོང་ན་བཏང་སྙོམས་བྱེད་པ་སོགས་ངོ་སྤྲོད་རགས་ཙམ་ཞུས་པའོ། །
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
