*Empty MediaWiki Message*

--- a/བཀྲིས་གཡང་རྩེ་རྫོང་ཁག.mw
+++ b/བཀྲིས་གཡང་རྩེ་རྫོང་ཁག.mw
@@ -1,28 +1,1 @@
-[[File:BhutanTrashiyangtse.png|right|thumb]] 
-[[བཀྲིས་གཡང་རྩེ་རྫོང་ཁག|བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག]] འབྲུག་གི་རྫོང་ཁག ལུ། [[འབྲུག་ཡུལ་|འབྲུག་ཡུ]]
-== ཁོར་ཡུག ==
-== མགྲོན་ཁང་། ==
-== ལོ་རྒྱུས། ==
-== ལྗོངས་རྒྱུ། ==
-== ཡུལ་ཚོ། ==
-==མིང་ཐོགས་ཚུལ།==
-== དུས་ཆེན། ==
-== མི་སྣ། ==
-== པར་རིས་བར་འཁྱམས། ྄ུཅཀཡོུ ==
-<center>
-<gallery>
-
-
-
-</gallery>
-</center>
-== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
-== དཔྱད་གཞིའི་དཀར་ཆག། ==
-== ད་དུང་གཟིགས། ==
-== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-* [http://www.trashiyangtse.gov.bt བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]
-* [http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=35 འབྲུག་གི་འཛུལ་སྒོ་ བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]
-
-{{stub}}
-
-[[Category:འབྲུག་གི་རྫོང་ཁག]]
+<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
