--- a/༢༠༡༧.mw
+++ b/༢༠༡༧.mw
@@ -1,1 +1,11 @@
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] :
+* [[སྲིད་བློན།]] : 
 
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
