--- a/ཀམ་བོ་ཌི་ཡ་.mw
+++ b/ཀམ་བོ་ཌི་ཡ་.mw
@@ -1,1 +1,14 @@
+[[File:Flag of Cambodia.svg|right|150px]]
+[[File:LocationCambodia.svg|right|thumbnail|ཀམ་བོ་ཌི་ཡ་]]
 
+'''ཀམ་བོ་ཌི་ཡ་'''
+----
+
+* [[ནོམ་པེན]]
+
+{{Asia}}
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
+[[Category:ཨེ་ཤི་ཡ]]
