--- a/བསམ་རྩེ་རྫོང་ཁག.mw
+++ b/བསམ་རྩེ་རྫོང་ཁག.mw
@@ -1,1 +1,29 @@
-<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+[[File:BhutanSamtse.png|right|thumb]]
+
+བསམ་རྩེ་རྫོང་ཁག
+
+
+== ཁོར་ཡུག ==
+== མགྲོན་ཁང་། ==
+== ལོ་རྒྱུས། ==
+== ལྗོངས་རྒྱུ། ==
+== ཡུལ་ཚོ། ==
+==མིང་ཐོགས་ཚུལ།==
+== དུས་ཆེན། ==
+== མི་སྣ། ==
+
+== པར་རིས་བར་འཁྱམས། ==
+<center>
+<gallery>
+
+
+
+</gallery>
+</center>
+== ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
+== དཔྱད་གཞིའི་དཀར་ཆག། ==
+== ད་དུང་གཟིགས། ==
+== ཕྱི་ཕྱོགས་དྲྭ་མཐུད། ==
+{{stub}}
+
+[[Category:འབྲུག་གི་རྫོང་ཁག]]
