--- a/༢༠༡༠.mw
+++ b/༢༠༡༠.mw
@@ -1,1 +1,13 @@
-<ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+* [[སྲིད་བློན།]] :
+
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+{{translate}}{{stub}}
