Reverted edits by [[Special:Contributions/Mr. Warren Bolphazky, reloaded|Mr. Warren Bolphazky, reloaded]] ([[User talk:Mr. Warren Bolphazky, reloaded|talk]]) to last revision by [[User:79.165.138.46|79.165.138.46]]

--- a/དཔལ་འཁོར་བཙན་.mw
+++ b/དཔལ་འཁོར་བཙན་.mw
@@ -1,6 +1,6 @@
 ཡབ་གནམ་ལྡེ་འོད་སྲུངས་དང་ཡུམ་ཅོག་རོ་བཟའ་རྒྱལ་མོ་གཉིས་ཀྱི་སྲས་སུ་བོད་ཤིང་བྱ་༩༢༥ལོར་ཡར་ལུང་འཕང་ཐང་དུ་སྐུ་འཁྲུངས་ཞེས་དང་།  བོད་ཆུ་གླང་（༨༩༣མམ་༩༥༣བཞེད་ཚུལ་མི་གཅིག་）ལོར་འཁྲུངས་སོགས་གསུངས་ཚུལ་མི་འདྲ་བ་མཆིས་།  འདི་ཉིད་དགུང་ལོ་བཅུ་གསུམ་ལ་ཕེབས་སྐབས་ཡབ་འོད་སྲུངས་གཤེགས་པས་གཙང་གི་གྲོམ་པ་ལྷ་རྩེར་གཤེགས་རྫོང་ཆོས་འཁོར་རྒྱ་ཆེར་བསྐོར་པ་དང་དུས་མཚུངས་རྒྱལ་རྒྱུད་ཀྱི་ཁྲི་ལ་འཁོད་།  བློན་པོ་འབྲོ་ཙུག་སྒྲ་ལྷ་སྣང་དང་།  ཅང་འ་ཕོ་གཉིས་ཀྱིས་བྱས་།  དགུང་ལོ་བཅུ་དྲུག་པར་ཡབ་མེས་ཀྱི་བང་སོ་ལ་ཐིགས་ཚགས་བྱས་ནས་ཆུང་ཁུང་ཤུར་ཁ་བཙུགས་ལེ་ནས་སྒྲོལ་ཕུའི་སྨན་ལུང་ལ་སོགས་པའི་གཙུག་ལག་ཁང་བརྒྱད་བཞེངས་། གསུང་རབ་དང་བྲིས་སྐུ་ལ་སོགས་པ་བྱས།  མེས་ཀྱི་སྤྱོད་པ་ལ་དམད་ཅིང་།  ཆོས་ལ་གུས་པ་ཞིག་བྱུང་།  འདི་ཉིད་དགུང་ལོ་ཉེར་དྲུག་ལ་ཕེབས་སྐབས་བོད་དུ་རབ་བྱུང་སོགས་ལས་ཀྱི་ཆོ་ག་དང་།  ཀློག་པ་ཐོས་བསམ་གྱི་འགོ་ཚུགས་པས་བསྟན་པ་ཕྱི་དར་དབུ་བརྙེས་།  སྐུ་ཚེའི་སྨད་དུ་གཙང་དུ་བྱོན་ཏེ་གྲོམ་པ་ལྷ་རྩེའི་བྲག་ལ་ཕོ་བྲང་མཛད་ནས་བཞུགས་།  མཐར་དགུང་ལོ་སོ།གཅིག་པར་གྲོམ་ལྷ་རྩེར་སྟག་རྩེ་སྙགས་ཀྱིས་བཀྲོངས་།  དེ་ཡང་།  མངའ་བདག་དཔལ་འཁོར་སྟག་རྩེ་སྙགས་ཀྱིས་བཀྲོངས་།  རྒྱུ་མཚན་སྙགས་ཕྱེད་གཙང་དུ་བཤུགས་པར་བྱས་པ་དང་།  གཙང་གི་འབྲི་ཕྱིད་མར་ཡར་ལུང་དུ་དབབ་པར་བྱས་པས་སོ་ཞེས་《མཁས་པ་ལྡེའུའི་ཆོས་འབྱུང་》ནང་གསལ་།  དཔལ་འཁོར་བཙན་གྱིས་བཙུན་མོ་གཉིས་ཁབ་ཏུ་བཞེས་པར་ཆུན་མ་ མཆིམས་བཟའ་བཙུན་ནེ་ལ་གཅེན་ཁྲི་བཀྲ་ཤིས་བརྩེགས་པ་དཔལ་དང་།  ཆེན་མ་སྣ་ནམ་བཟའ་ལེགས་བཙུན་ལ་གཅུང་སྐྱིད་ལྡེ་ཉི་་མ་མགོན་གཉིས་འཁྲུངས་སོ་། 
 དཔལ་གྱི་ཆས་བརྒྱད།  ༡、གཟི་བརྗིད་འབར་བ་ཆུ་སྲིན་བརྗིད་པའི་ཆས།  ༢、ཐབས་དང་ཤེས་རབ་ཟུང་འབྲེལ་ཉི་ཟླའི་ཆས་ ༣、གདུག་པ་ཅན་བསྲེག་ཡེ་ཤེས་མེའི་ཆས། ༤、སྐྱེ་ཤི་རྩད་གཅོད་མཆེ་བ་ཟླ་ཚེས་ཆས། ༥、ཁྱབ་མཛད་རེ་བསྐོང་རྡོ་རྗེའི་གཤེགས་པའི་ཆས། ༦、མངའ་ཐང་ཡོངས་རྫོགས་རྡོ་རྗེ་སླག་པའི་ཆས།  ༧、སངས་རྒྱས་སར་བགྲོད་དབང་གི་བསེ་ཁྲབ་ཆས་ ༨、གནོད་གདུག་བཟློག་བྱེད་རྒྱ་བྱེའུ་ལྕགས་ཀྱི་ཆས་ཞེས་པའམ། ཡང་ན། ༡、དབུ་སྐྲ་གྱེན་བརྫེས་འཁོར་བ་རུ་བཟློག་ཆས། ༢、རྡོ་རྗེ་ཁྱུང་གཁོག་ཐབས་དང་ཤེས་རབ་ཆས། ༣、མཐིང་ནག་ཅོད་པན་དཔའ་རྟགས་ཟིལ་གནོན་ཆས།  ༤、སྤྱི་གཙུག་རྡོ་རྗེ་ལྷག་པ་རིག་པའི་ཆས། ༥、དབང་གི་བསེ་ཁྲབ་གཟི་འབར་བགྲོད་པའི་ཆས།  ༦、གཉིས་མེད་སྦྱོར་བ་ཤེས་རབ་ཡུམ་གྱི་ཆས།  ༧、གནོད་གདུག་བཟློག་བྱེད་རྒྱ་བྱེའུ་ལྕགས་ཀྱི་ཆས།  ༨、ཉོན་མོངས་ཅན་བསྲེག་རྡོ་རྗེ་མེ་ཡི་ཆས།  དེ་རྣམས་དཔལ་གྱི་སྐུ་ལ་ཡེ་ནས་རྫོགས།<br />
-༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br /><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref><ref>{{cite book | last=Kjellberg | first=Felix | title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity | url=https://www.xnxx.com | location=Sweden | publisher=Felix ulf arvid Kjellberg | year=2017 | isbn=9781405924047 | page=22}}</ref>
+༼[[དུང་དཀར་ཚིག་མཛོད་ཆེན་མོ་]]༽ལས་བཏུས།<br />
 
 {{translate}}
 
