Reverted edits by [[Special:Contributions/Mr. Warren Bolphazky, reloaded|Mr. Warren Bolphazky, reloaded]] ([[User talk:Mr. Warren Bolphazky, reloaded|talk]]) to last revision by [[User:Impro|Impro]]

--- a/སྤ་རོ་རིན་སྤུང་རྫོང.mw
+++ b/སྤ་རོ་རིན་སྤུང་རྫོང.mw
@@ -1,1 +1,26 @@
-fuck you
+[[image:Bhutan dzong at paro.jpg|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:'' Keith Mason ]]
+[[Image:Rinpung_Dzong_Paro_2007-11-11_CJF.JPG|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:''[[User:CFynn| Christopher Fynn]] ]]
+
+''སྤ་རོ་རིན་སྤུང་རྫོང'' - རྫོང [[སྤ་རོ་]]
+
+
+
+སྤ་རོ་རྫོང་འདི་ ༡༦༤༤ ལུ་ ཞབས་དྲུང་ ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་ བཀའ་རྒྱ་དང་འཁྲིལ་ཏེ་ བཞེངས་ནི་འགོ་བཙུགས་ནུག། ༡༩༠༧ ལུ་ མེ་རྐྱེན་ལུ་བརྟེན་ གནོད་པ་འབྱུང་ཡོད་རུང་ ༡༨༩༧ ལུ་ ས་གཡོམ་རྐྱབས་ཏེ་ རྒྱལ་ཁབ་ཀྱི་ རྫོང་གཞི་གཞན་ཚུ་མེདཔ་གཏང་དེ་ར་འབད་རུང་ སྤ་རོ་རྫོང་འདི་ལུ་གནོད་སྐྱོན་ག་ནི་ཡང་མ་འབྱུངམ་ཨིན་མས།
+
+སྤ་རོ་ རྫོང་གི་མིང་ངོ་མ་འདི་ རིན་སྤུང་རྫོང་ཟེར་སླབ་ཨིནམ་དང་ དེའི་དོན་དག་འདི་ རིན་ཆེན་སྤུངས་བཞག་ཡོད་པའི་རྫོང་ཟེར་ཨིན་མས། དུས་རབས་ ༡༥ པའི་ནང་ ཕ་ཇོ་འབྲུག་སྒོམ་བཞི་པོའི་ སློབ་མ་ རྒྱལ་མཆོག་དང་ རྒྱལ་འཛོས་སྤུན་ཆ་གཉིས་ སྤ་རོ་ལུ་སྡོད་ཡོདཔ་དང་ རྒྱལ་འཛོམས་གིས་ སྒང་ཏ་ཁ་ ལྷ་ཁང་ནང་ལུ་ གདན་ས་བཅག་ཡོདཔ་དང་ ཁོ་གི་སྤུན་ཆ་ རྒྱལ་མཆོག་དེ་ ཆོས་ལུགས་རིག་པ་ལྷཔ་ནིའི་དོན་ལུ་སོང་ཞིནམ་ལས་ ལོག་སྤ་རོ་ལུ་འོང་ནུག། རྒྱལ་མཆོག་གིས་ ཧུམ་རལ་དགོན་པ་ལུ་འབྱོན་ཏེ་ ལྷ་ཁང་ཆུང་ཀུ་གཅིག་བཞེངས་ཡོདཔ་དང་ ཁོ་གི་ སློབ་མ་ཚུ་ ས་གནས་དེ་ཁར་དབང་ཚད་ཡོདཔ་ལས་ འབྲུག་གི་རྒྱལ་རབ་ནང་ལུ་ “ཧུམ་རལ་གྱི་དྲག་རིམ་”ཟེར་ ཡོངས་གྲགས་ཡོདཔ་ཨིན།
+
+༡༦༤༥ ལུ་ ཁོང་ཚུ་གིས་ ཞབས་དྲུག་གི་ ཆོས་དང་སྲིད་ཀྱི་དབང་ཆ་ངོས་འཛིན་འབད་ཞིནམ་ལས་ ཁོང་རའི་རྫོང་ཆུང་ཀུ་དེ་ ཞབས་དྲུག་ལུ་ ཕུལ་ཏེ་ དེ་འཕྲོད་ལས་ ཞབས་དྲུང་མཆོག་གིས་ རྫོང་སྦོམ་སྦེ་བཞེངས་ནི་འགོ་བཙུགས་ཏེ་ ༡༦༤༦ ལུ་ རྫོང་འདི་རབ་གནས་གནང་ནུག།
+
+རི་ དུམ་དྲག་ཅིག་གཟར་དྲགས་དང་ ཤིང་གི་ཟམ་མཛེས་ཏོག་ཏོ་གཅིག་གི་ སྦོ་ལོག་ཁར་བཞེངས་ཡོེད་པའི་རྫོང་འདི་ སྤ་རོ་ རྫོང་ཁག་བདག་སྐྱོང་གི་ཕྱག་ལཱ་གནང་ས་ཨིནམ་མ་ཚད་ འདི་ནང་ལུ་ གྲྭ་ཚང་ཡང་ཡོདཔ་མ་ཚད་ དགེ་སློང་ ༢༠༠ དེ་ཅིག་ཡོདཔ་ཨིན་མས།
+
+རྫོང་གི་རྡོག་ཅལ་དང་པམ་འདི་ནང་ལུ་ བདག་སྐྱོང་གི་ཡིག་ཚང་ཚུ་ཡོདཔ་དང་ འཛུལ་སྒོའི་གཡས་དང་གཡོན་ལུ་ མི་གཅིག་སེམས་ཅན་སྟག་གཅིག་ཁྱིད་དེ་ཡོད་མི་སྐུ་འདྲ་གཅིག་དང་ ཕོ་རྒས་གཅིག་གིས་གཡག་གནགཔོ་གཅིག་ཟུང་སྟེ་ཡོད་པའི་སྐུ་འདྲ་གཅིག་ཡོདཔ་ཨིན། རྫོང་གི་དབུ་རྩེ་འདི་ ཤིང་བཟོ་ངོ་མཚར་ཆེ་ཏོག་ཏོ་ཡོད་མི་དེ་ རྒྱལ་ཁབ་ནང་ལུ་ མཛེས་ཤོས་གཅིག་ཨིན་མས།
+
+རྫོང་གི་ལྟག་ལུ་ ལྟ་རྫོང་ཡོདཔ་དང་ ད་རེས་ནངས་པ་འདི་ནང་ལུ་ རྒྱལ་ཡོངས་ འགྲེམ་སྟོན་ཁང་ཡོདཔ་ཨིན། ༡༩༠༥ ལུ་ རྫོང་འདི་ལུ་མེ་རྐྱེན་འབྱུང་དེ་ར་འབད་རུང་ ༡༩༠༨ དང་ ༡༩༠༩ ལུ་ གུ་རུ་རིན་པོ་ཆེ་དང་ སྟོན་པ་ དེ་ལས་ ཞབས་དྲུང་གི་སྐུ་ཚུ་ ཧེང་བཀལ་བཙུགས་ཏེ་ ཉམས་གསོ་ཞུ་ནུག། རྫོང་འདིའི་ནང་རྟེན་གཙོབོ་ ཐང་ཀ་ མི་ཊར་ ༢༠ x༢༠ འབད་མི་ མཐོང་འགྲོལ་ དེ་ མེ་རྐྱེན་གྱི་སྐབས་ལུ་ བསྲུངས་བཞག་འབད་ཡོད་མི་དེ་ ཚེས་བཅུའི་སྐབས་ལུ་ མི་མང་ལུ་ མཇལ་ཁ་གནངམ་ཨིན།
+
+
+
+
+{{stub}}
+
+[[Category:རྫོང]]
+[[Category:སྤ་རོ་རྫོང་ཁག]]
