Reverted edits by [[Special:Contributions/Mr. Warren Bolphazky, reloaded|Mr. Warren Bolphazky, reloaded]] ([[User talk:Mr. Warren Bolphazky, reloaded|talk]]) to last revision by [[User:Impro|Impro]]

--- a/ཕུམིཕོན་ཨདོནཡཨདེཏ.mw
+++ b/ཕུམིཕོན་ཨདོནཡཨདེཏ.mw
@@ -1,2 +1,2 @@
-<ref>{{cite book|last=Kjellberg|first=Felix|title=Non-wave motion induced, theoretical measuring particular wavelength inducted insensitivity|url=https://www.xnxx.com|location=Sweden|publisher=Felix ulf arvid Kjellberg|year=2017|isbn=9781405924047|page=22}}</ref>[[File:King Bhumibol Adulyadej Portrait-1945.jpg|thumb]]
+[[File:King Bhumibol Adulyadej Portrait-1945.jpg|thumb]]
 '''ཕུམིཕོན་ཨདོནཡཨདེཏ''' ལྡན་ནི།་མི་དབང་རྒྱལཔོ།་[[ཐཱའི་ལེནཌ]]{{stub}}
